2002-02-25  JP Rosevear  <jpr@ximian.com>

	* src/libsoup/soup-socket-unix.c: apparently some platforms don't
	define INADDR_NONE either

2002-02-25  JP Rosevear  <jpr@ximian.com>
	
	* src/soup-httpd/Makefile.am: add popt cflags to includes

	* src/libsoup/soup-socket.c: apparently INET_ADDRSTRLEN is not
	defined on some unix platforms

	* src/libsoup/soup-socket-unix.c (soup_address_new): handle not
	have inet_pton and inet_aton with inet_addr

	* configure.in: check for inet_aton as well and allow config
	options to specify popt location

2002-02-23  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-queue.c (proxy_connect): Pull proxy connection
	code out of soup_queue_connect_cb to here.
	(start_request): Delay calling soup_message_issue_callback here.
	(soup_queue_connect_cb): Ditto.
	(soup_idle_handle_new_requests): Call soup_message_issue_callback
	if req->errorcode is set.  This avoids an FMW when setting the
	connect tag on a request which has a connect error and has been
	freed.

	* src/libsoup/soup-message.c (requeue_connect_cb): Call
	soup_message_issue_callback if req->errorcode is set.

	* src/libsoup/soup-context.c (soup_context_connect_cb): Add
	timeout handler to retry connect if new connection failed and
	there are existing connections to this host.
	(soup_context_get_connection): Drop timeout interval to 150 from 500.

	* src/libsoup/soup-misc.c: Set default connection limit to 10.

2002-02-17  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket.c (soup_socket_connect_inetaddr_cb):
	Check result from soup_socket_new.

	* src/libsoup/soup-queue.c (soup_idle_handle_new_requests): Check
	result from soup_context_get_connection.

	* src/libsoup/soup-context.c (soup_context_connect_cb): Don't
	access 'data' after free.
	(soup_context_get_connection): Check return from
	soup_socket_connect, as a null result means our callback has been
	issued and our state freed.

2002-02-15  Dan Winship  <danw@ximian.com>
